fix match width on mobile

--- a/cmd/static/gen.css
+++ b/cmd/static/gen.css
@@ -12222,9 +12222,6 @@ mark.hl {
   align-content: center;
 }
 
-.matches {
-  min-width: 600px;
-}
 .matches .fragment {
   position: relative;
 }
