--- a/styles.scss
+++ b/styles.scss
@@ -593,7 +593,6 @@ mark.hl {
 }
 
 .matches {
-  min-width: 600px;
   .fragment {
     position: relative;
 
